@@ -1,0 +1,15 @@
+﻿using System;
+using System.Collections.Generic;
+using System.Linq;
+using System.Text;
+using System.Threading.Tasks;
+
+namespace Business.Data.Objects.TestClass.DTO
+{
+    public class SP_GT005_CAP_FIND_RESULT
+    {
+        public int GT005_COD_CAP_PK { get; set; }
+        public string GT005_DESCR_CAP { get; set; }
+    }
+
+}
