@@ -8,6 +8,7 @@
   <package id="MySql.Data" version="8.0.22" targetFramework="net472" />
   <package id="SSH.NET" version="2016.1.0" targetFramework="net472" />
   <package id="System.Buffers" version="4.5.1" targetFramework="net472" />
+  <package id="System.Data.SqlClient" version="4.8.3" targetFramework="net472" />
   <package id="System.Memory" version="4.5.3" targetFramework="net472" />
   <package id="System.Numerics.Vectors" version="4.4.0" targetFramework="net472" />
   <package id="System.Runtime.CompilerServices.Unsafe" version="4.5.2" targetFramework="net472" />
